Add proper logging